--- a/angular-src/shakespeer/src/app/components/main/main.component.html
+++ b/angular-src/shakespeer/src/app/components/main/main.component.html
@@ -1,10 +1,13 @@
-<div style="padding-top:20px; padding-left:30px; padding-right:30px" class="container-fluid">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-md-3">
+    <div style="padding:0" class="col-sm-2">
       <app-sidebar></app-sidebar>
     </div>
-    <div class="col-md-9">
+    <div class="col-sm-8">
       <app-network></app-network>
+    </div>
+    <div class="col-sm-2">
+      <!-- to fill in with the detailed view -->
     </div>
   </div>
 </div>
