--- a/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
+++ b/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,40 @@
-<div>
-  This is where the sidebar will be.
+<div class="sidebar">
+  <div class="inner-sidebar">
+    <div class="sb-header">Scenes</div>
+    <ul class="sb-list-group list-group">
+      <li class="sb-list-item list-group-item">
+        <a href="#">Act I</a>
+      </li>
+      <li class="sb-list-item list-group-item">
+        <a href="#">Act II</a>
+      </li>
+    </ul>
+    <div class="sb-header">Characters</div>
+    <ul class="sb-list-group list-group">
+      <li class="sb-list-item list-group-item">
+        <a href="#">Titania</a>
+      </li>
+      <li class="sb-list-item list-group-item">
+        <a href="#">Lysander</a>
+      </li>
+      <li class="sb-list-item list-group-item">
+        <a href="#">Hippolyta</a>
+      </li>
+      <li class="sb-list-item list-group-item">
+        <a href="#">Helena</a>
+      </li>
+      <li class="sb-list-item list-group-item">
+        <a href="#">Puck</a>
+      </li>
+    </ul>
+    <div class="sb-header">Relationships</div>
+    <ul class="sb-list-group list-group">
+      <li class="sb-list-item list-group-item">
+        <a href="#">Titania <-> Lysander</a>
+      </li>
+      <li class="sb-list-item list-group-item">
+        <a href="#">Hippolyta <-> Helena</a>
+      </li>
+    </ul>
+  </div>
 </div>
