--- a/angular-src/shakespeer/src/app/components/main/main.component.html
+++ b/angular-src/shakespeer/src/app/components/main/main.component.html
@@ -3,11 +3,11 @@
     <div style="padding:0" class="col-sm-2">
       <app-sidebar></app-sidebar>
     </div>
-    <div class="col-sm-8">
+    <div class="col-sm-7">
       <app-network></app-network>
     </div>
-    <div class="col-sm-2">
-      <!-- to fill in with the detailed view -->
+    <div class="col-sm-3">
+      <app-relationship></app-relationship>
     </div>
   </div>
 </div>
