--- a/angular-src/shakespeer/src/app/components/network/network.component.html
+++ b/angular-src/shakespeer/src/app/components/network/network.component.html
@@ -2,11 +2,16 @@
 <div>
 <h2>Character View</h2>
 <form action="/action_page.php">
-  <input type="checkbox" id="overview" (change) = "handleScnSelection($event, id)" > Overview<br>
-  <input type="checkbox" id="a1s1" (change) = "handleScnSelection($event, id)" > Act 1, Scene 1<br>
-  <input type="checkbox" id="a1s2" (change) = "handleScnSelection($event, id)" > Act 1, Scene 2<br>
-  <input type="checkbox" id="a2s1" (change) = "handleScnSelection($event, id)" > Act 2, Scene 1<br>
-  <input type="checkbox" id="a2s2" (change) = "handleScnSelection($event, id)" > Act 2, Scene 2<br>
+  <input type="radio" name="scnSelection" id="overview" (change) = "handleScnSelection($event, id)" > Overview<br>
+  <input type="radio" name="scnSelection" id="a1s1" (change) = "handleScnSelection($event, id)" > Act 1, Scene 1<br>
+  <input type="radio" name="scnSelection" id="a1s2" (change) = "handleScnSelection($event, id)" > Act 1, Scene 2<br>
+  <input type="radio" name="scnSelection" id="a2s1" (change) = "handleScnSelection($event, id)" > Act 2, Scene 1<br>
+  <input type="radio" name="scnSelection" id="a2s2" (change) = "handleScnSelection($event, id)" > Act 2, Scene 2<br>
+  <input type="radio" name="scnSelection" id="a3s1" (change) = "handleScnSelection($event, id)" > Act 3, Scene 1<br>
+  <input type="radio" name="scnSelection" id="a3s2" (change) = "handleScnSelection($event, id)" > Act 3, Scene 2<br>
+  <input type="radio" name="scnSelection" id="a4s1" (change) = "handleScnSelection($event, id)" > Act 4, Scene 1<br>
+  <input type="radio" name="scnSelection" id="a4s2" (change) = "handleScnSelection($event, id)" > Act 4, Scene 2<br>
+  <input type="radio" name="scnSelection" id="a5s1" (change) = "handleScnSelection($event, id)" > Act 5, Scene 1<br>
   </form>
 
 <svg  id="graphContainer"
