--- a/angular-src/shakespeer/src/app/components/relationship/relationship.component.html
+++ b/angular-src/shakespeer/src/app/components/relationship/relationship.component.html
@@ -1,5 +1,7 @@
 <div>
-<h2>Relationship View</h2>
+<h3>Sentiment Valence</h3>
 
-<svg width="400" height="200"></svg>
+<svg width="350" height="200" id="svg1"></svg>
+
+<svg width="350" height="200" id="svg2"></svg>
 </div>
