add data analysis and update sentiment data

--- a/angular-src/shakespeer/src/app/components/relationship/relationship.component.html
+++ b/angular-src/shakespeer/src/app/components/relationship/relationship.component.html
@@ -1,7 +1,10 @@
 <div>
 <h3>Sentiment Valence</h3>
+<form action="/action_page.php">
+  <input type="radio" name="rltSelection" id="THESEUS-HIPPOLYTA" (change) = "handleScnSelection($event, id)" > THESEUS-HIPPOLYTA<br>
+  <input type="radio" name="rltSelection" id="LYSANDER-HERMIA" (change) = "handleScnSelection($event, id)" > LYSANDER-HERMIA<br>
+  </form>
 
-<svg width="350" height="200" id="svg1"></svg>
+<svg width="100%" height="800" id="svg1"></svg>
 
-<svg width="350" height="200" id="svg2"></svg>
 </div>
