initial version of small multiples

--- a/angular-src/shakespeer/src/app/components/main/main.component.html
+++ b/angular-src/shakespeer/src/app/components/main/main.component.html
@@ -1,18 +1,17 @@
 <div class="container-fluid">
   <div class="row">
-
     <!-- SIDEBAR VIEW -->
     <div style="padding:0" class="col-sm-2">
       <app-sidebar></app-sidebar>
     </div>
 
     <!-- NETWORK VIEW -->
-    <div class="col-sm-7">
+    <div style="padding:0" class="col-sm-6">
       <app-network></app-network>
     </div>
 
     <!-- RELATIONSHIP VIEW -->
-    <div class="col-sm-3">
+    <div style="padding:0" class="col-sm-4">
       <app-relationship></app-relationship>
     </div>
 
