--- a/angular-src/shakespeer/src/app/components/relationship/relationship.component.html
+++ b/angular-src/shakespeer/src/app/components/relationship/relationship.component.html
@@ -1,7 +1,6 @@
-<div>
-<h3>Sentiment Valence</h3>
-
-<svg width="350" height="200" id="svg1"></svg>
-
-<svg width="350" height="200" id="svg2"></svg>
+<div class="rel-view">
+  <div #relationship id="relationship-viz" (window:resize)="onResize()"></div>
+<!--<h3>Sentiment Valence</h3>-->
+<!--<svg width="350" height="200" id="svg1"></svg>-->
+<!--<svg width="350" height="200" id="svg2"></svg>-->
 </div>
