--- a/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
+++ b/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
@@ -3,7 +3,28 @@
 
     <div class="play-header">A Midsummer Night's Dream</div>
     <div style="font-size: 12px"> 1595, Comedy</div>
-    <div style="font-size: 12px">Include some summary info about the play here.</div>
+
+    <div class="sb-header">Summary
+      <span class="header-options"> 
+            [ <a href="#" (click)="showSummary = !showSummary">{{showSummary ? 'Hide' : 'Show'}}</a> ]
+      </span>
+    </div>
+
+    <div *ngIf="showSummary">
+       <div style="font-size: 12px">It portrays the events surrounding the 
+      marriage of Theseus, the Duke of Athens, to Hippolyta 
+      (the former queen of the Amazons). These include the adventures of
+       four young Athenian lovers and a group of six amateur actors 
+       (the mechanicals) who are controlled and manipulated by the fairies 
+       who inhabit the forest in which most of the play is set. (Wikipedia)</div>
+    </div>
+   
+
+    <div class="sb-header">Statistics</div>
+    <div style="font-size: 12px">
+      Number of Acts: 5 Acts (9 Scenes)
+      Number of Characters: 24
+    </div>
 
     <!-- SCENES -->
     <div class="sb-header">Scenes</div>
@@ -28,25 +49,67 @@
       </li>
     </ul>
 
-    <div class="sb-header">
-      Characters <span class="header-options">(5 of 24)</span>
+    <!-- CHARACTERS -->
+    <div class="sb-header">Characters
+      <span class="header-options"> 
+            [ <a href="#" (click)="show = !show">{{show ? 'Show more' : 'Show less'}}</a> ]
+      </span>
     </div>
 
-    <ul class="sb-list-group list-group">
-      <li *ngFor="let character of characterList | slice:0:5; let i=index" class="sb-list-item list-group-item">
-        <a href="#">{{character.id}}</a>
-      </li>
-    </ul>
+    <div id="block_container1">
 
-    <div class="sb-header">Relationships</div>
-    <ul class="sb-list-group list-group">
-      <li class="sb-list-item list-group-item">
-        <a href="#">Titania <-> Lysander</a>
-      </li>
-      <li class="sb-list-item list-group-item">
-        <a href="#">Hippolyta <-> Helena</a>
-      </li>
-    </ul>
+      <div class = "header-options">
+          <b> Sort by </b>
+          <br>
+          <input type="radio" name="sort" id="wc" (change) = "sortListWC()"> Speech frequency<br>
+          <input type="radio" name="sort" id="os" (change) = "sortListOS()"> Outward Sentiment<br>
+          <input type="radio" name="sort" id="is" (change) = "sortListIS()"> Inward Sentiment<br>
+      </div>
 
-  </div>
+      <div class = "header-options">
+          <b> Order </b>
+          <br>
+          <input type="radio" name="order" id="dsc" (change) = "sortListOrd(false)"> Descending<br>
+          <input type="radio" name="order" id="asc" (change) = "sortListOrd(true)"> Ascending<br>
+      </div>
+    </div>
+
+    <!-- Show only a subset -->
+    <div *ngIf="show; else elseBlock">
+      <div id="block_container2">
+
+        <ul class="sb-list-group list-group">
+        <li *ngFor="let character of characterList | slice:0:5; let i=index" class="sb-list-item list-group-item">
+          <a href="#">{{character.id}}</a>
+        </li>
+        </ul>
+
+        <ul class="sb-list-group-center list-group">
+        <li *ngFor="let character of characterList | slice:0:5; let i=index" class="sb-list-item list-group-item">
+          <a align="center">{{character.total}}</a>
+        </li>
+        </ul>
+      </div>
+    </div>
+
+    <ng-template #elseBlock>
+      <div id="block_container2">
+
+        <ul class="sb-list-group list-group">
+        <li *ngFor="let character of characterList" class="sb-list-item list-group-item">
+          <a href="#">{{character.id}}</a>
+        </li>
+        </ul>
+
+        <ul class="sb-list-group-center list-group">
+        <li *ngFor="let character of characterList" class="sb-list-item list-group-item">
+          <a align="center">{{character.total}}</a>
+        </li>
+        </ul>
+      </div>
+    </ng-template>
+
+    
+    
+
 </div>
