--- a/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.scss
+++ b/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.scss
@@ -6,7 +6,7 @@
 
 .sidebar {
   background-color: #EDEDED;
-  height: 100vh;
+  height: 120vh;
   padding: 0;
   margin: 0;
 }
@@ -29,6 +29,12 @@
   font-size: 11px;
 }
 
+.sb-list-group-center {
+  margin-left: 10px;
+  font-size: 11px;
+  text-align: center;
+}
+
 .sb-list-item {
   padding: 0;
   border: 0px solid #ffffff;
@@ -36,10 +42,22 @@
   background-color: transparent;
 }
 
-.sb-selected-scene {
-  font-weight: bold;
+.sb-list-item-center {
+  padding: 0;
+  border: 0px solid #ffffff;
+  margin: 0 0 2px;
+  background-color: transparent;
 }
 
-.sb-selected-type {
-  font-weight: bold;
+#block_container1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+
+#block_container2 {
+    display: flex;
+    align-items: stretch;
+    justify-content: left;
 }
