--- a/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.scss
+++ b/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.scss
@@ -1,3 +1,4 @@
+  
 .play-header {
   font-size: 16px;
   font-weight: bold;
@@ -17,6 +18,11 @@
 
 .header-options {
   font-size: 10px;
+}
+
+.header-options-right {
+  font-size: 10px;
+  margin-left: 20px;
 }
 
 .sb-header {
@@ -49,15 +55,16 @@
   background-color: transparent;
 }
 
-#block_container1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-}
-
-
 #block_container2 {
     display: flex;
     align-items: stretch;
     justify-content: left;
+}
+
+.sb-selected-scene {
+  font-weight: bold;
+}
+
+.sb-selected-type {
+  font-weight: bold;
 }
