All components merged

--- a/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
+++ b/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div *ngIf="showSummary">
-       <div style="font-size: 11px">It portrays the events surrounding the 
+       <div style="font-size: 11px">A Midsummer Night's Dream portrays the events surrounding the 
       marriage of Theseus, the Duke of Athens, to Hippolyta 
       (the former queen of the Amazons). These include the adventures of
        four young Athenian lovers and a group of six amateur actors 
