--- a/angular-src/shakespeer/src/app/components/relationship/relationship.component.scss
+++ b/angular-src/shakespeer/src/app/components/relationship/relationship.component.scss
@@ -3,6 +3,12 @@
   height: 100vh;
   background-color: whitesmoke;
   overflow-y: scroll;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.rel-view::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
 }
 
 .rel-input {
