fix sidebar sentiment

--- a/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
+++ b/angular-src/shakespeer/src/app/components/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
     <div class="play-header">A Midsummer Night's Dream</div>
     <div style="font-size: 12px"> 1595, Comedy</div>
 
-    <div class="sb-header">Summary
+    <div class="sb-header">Plot Summary
       <span class="header-options"> 
             [ <a href="#" (click)="showSummary = !showSummary">{{showSummary ? 'Hide' : 'Show'}}</a> ]
       </span>
